Cambio de nombre de boton y derechos de autores a mi

--- a/index.html
+++ b/index.html
@@ -8,12 +8,15 @@
             Bienvenido, Hola Mundo
         </h5>
         <button>    
-            Salir
+            Guardar
         </button>
     </body>
         
     <footer>    
-
+        <h5>
+            Todos los derechos reservados a mi persona, me copias y te demando
+            atte: io
+        </h5>
 
     </footer>
 </html>
