Se agrego botones y un mensaje de lo perdido que estoy

--- a/index.html
+++ b/index.html
@@ -7,9 +7,19 @@
         <h5>    
             Bienvenido, Hola Mundo
         </h5>
+        <h5>    
+            Aca no se que hacer 
+        </h5>
         <button>    
             Guardar
         </button>
+        <button>    
+            Other Button
+        </button>
+        <button>    
+            Another Button
+        </button>
+
     </body>
         
     <footer>    
